src/DHGrammarParser.py
# Generated from DHGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DHGrammarParser ( Parser ):

    grammarFileName = "DHGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sensor_presence'", "'sensor_rain'", 
                     "'sensor_light'", "'sensor_temperature'", "'sensor_time'", 
                     "'sensor_smoke'", "'sensor_gas'", "'sensor_wind'", 
                     "'sensor_intruder'", "'sensor_flood'", "'actuator_door'", 
                     "'actuator_heat'", "'actuator_wblind'", "'actuator_light'", 
                     "'actuator_window'", "'actuator_cold'", "'actuator_gas'", 
                     "'actuator_wind'", "'actuator_alarm'", "'actuator_emergency'", 
                     "'room'", "'house'", "'corridor'", "'global'", "'state'", 
                     "'init'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "':='", "';'", "'{'", "'}'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "SPRESENCIA", "SLLUVIA", "SILUMINACION", 
                      "STEMPERATURA", "SRELOJ", "SHUMO", "SGAS", "SVIENTO", 
                      "SINTRUSOS", "SINUNDACION", "APUERTA", "ACALEFACCION", 
                      "APERSIANA", "ALUZ", "AVENTANA", "AFRIO", "AGAS", 
                      "ATOLDO", "AALARMA", "AEMERGENCIA", "ROOM", "HOUSE", 
                      "CORRIDOR", "GLOBAL", "STATE", "INIT", "OPL", "BOOL", 
                      "ID", "DOUBLE", "TIME", "COMBINATION", "SEQ", "SEMICOLON", 
                      "LBRACKET", "RBRACKET", "COMMA", "SPACE", "COMMENT" ]

    RULE_casa = 0
    RULE_lh = 1
    RULE_lp = 2
    RULE_h = 3
    RULE_p = 4
    RULE_l2id = 5
    RULE_lsl = 6
    RULE_lal = 7
    RULE_lsg = 8
    RULE_lag = 9
    RULE_s = 10
    RULE_a = 11
    RULE_c = 12
    RULE_lest = 13
    RULE_lactions = 14
    RULE_action = 15
    RULE_init = 16
    RULE_trans = 17
    RULE_t = 18
    RULE_spresencia = 19
    RULE_slluvia = 20
    RULE_siluminacion = 21
    RULE_stemperatura = 22
    RULE_sreloj = 23
    RULE_shumo = 24
    RULE_sviento = 25
    RULE_sintrusos = 26
    RULE_sinundacion = 27
    RULE_sgas = 28
    RULE_apuerta = 29
    RULE_acalefaccion = 30
    RULE_apersiana = 31
    RULE_aluz = 32
    RULE_aventana = 33
    RULE_afrio = 34
    RULE_agas = 35
    RULE_atoldo = 36
    RULE_aalarma = 37
    RULE_aemergencia = 38

    ruleNames =  [ "casa", "lh", "lp", "h", "p", "l2id", "lsl", "lal", "lsg", 
                   "lag", "s", "a", "c", "lest", "lactions", "action", "init", 
                   "trans", "t", "spresencia", "slluvia", "siluminacion", 
                   "stemperatura", "sreloj", "shumo", "sviento", "sintrusos", 
                   "sinundacion", "sgas", "apuerta", "acalefaccion", "apersiana", 
                   "aluz", "aventana", "afrio", "agas", "atoldo", "aalarma", 
                   "aemergencia" ]

    EOF = Token.EOF
    SPRESENCIA=1
    SLLUVIA=2
    SILUMINACION=3
    STEMPERATURA=4
    SRELOJ=5
    SHUMO=6
    SGAS=7
    SVIENTO=8
    SINTRUSOS=9
    SINUNDACION=10
    APUERTA=11
    ACALEFACCION=12
    APERSIANA=13
    ALUZ=14
    AVENTANA=15
    AFRIO=16
    AGAS=17
    ATOLDO=18
    AALARMA=19
    AEMERGENCIA=20
    ROOM=21
    HOUSE=22
    CORRIDOR=23
    GLOBAL=24
    STATE=25
    INIT=26
    OPL=27
    BOOL=28
    ID=29
    DOUBLE=30
    TIME=31
    COMBINATION=32
    SEQ=33
    SEMICOLON=34
    LBRACKET=35
    RBRACKET=36
    COMMA=37
    SPACE=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CasaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HOUSE(self):
            return self.getToken(DHGrammarParser.HOUSE, 0)

        def ID(self):
            return self.getToken(DHGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHGrammarParser.LBRACKET, 0)

        def lh(self):
            return self.getTypedRuleContext(DHGrammarParser.LhContext,0)


        def RBRACKET(self):
            return self.getToken(DHGrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def EOF(self):
            return self.getToken(DHGrammarParser.EOF, 0)

        def lp(self):
            return self.getTypedRuleContext(DHGrammarParser.LpContext,0)


        def lsg(self):
            return self.getTypedRuleContext(DHGrammarParser.LsgContext,0)


        def lag(self):
            return self.getTypedRuleContext(DHGrammarParser.LagContext,0)


        def getRuleIndex(self):
            return DHGrammarParser.RULE_casa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCasa" ):
                listener.enterCasa(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCasa" ):
                listener.exitCasa(self)




    def casa(self):

        localctx = DHGrammarParser.CasaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_casa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(DHGrammarParser.HOUSE)
            self.state = 79
            self.match(DHGrammarParser.ID)
            self.state = 80
            self.match(DHGrammarParser.LBRACKET)
            self.state = 81
            self.lh()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23:
                self.state = 82
                self.lp()


            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 85
                self.lsg()


            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 88
                self.lag()


            self.state = 91
            self.match(DHGrammarParser.RBRACKET)
            self.state = 92
            self.match(DHGrammarParser.SEMICOLON)
            self.state = 93
            self.match(DHGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def h(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.HContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.HContext,i)


        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.COMMA)
            else:
                return self.getToken(DHGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lh

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLh" ):
                listener.enterLh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLh" ):
                listener.exitLh(self)




    def lh(self):

        localctx = DHGrammarParser.LhContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lh)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 95
                    self.h()
                    self.state = 96
                    self.match(DHGrammarParser.COMMA) 
                self.state = 102
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 103
            self.h()
            self.state = 104
            self.match(DHGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.PContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.PContext,i)


        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.COMMA)
            else:
                return self.getToken(DHGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLp" ):
                listener.enterLp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLp" ):
                listener.exitLp(self)




    def lp(self):

        localctx = DHGrammarParser.LpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 106
                    self.p()
                    self.state = 107
                    self.match(DHGrammarParser.COMMA) 
                self.state = 113
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 114
            self.p()
            self.state = 115
            self.match(DHGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOM(self):
            return self.getToken(DHGrammarParser.ROOM, 0)

        def ID(self):
            return self.getToken(DHGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHGrammarParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(DHGrammarParser.RBRACKET, 0)

        def lsl(self):
            return self.getTypedRuleContext(DHGrammarParser.LslContext,0)


        def lal(self):
            return self.getTypedRuleContext(DHGrammarParser.LalContext,0)


        def c(self):
            return self.getTypedRuleContext(DHGrammarParser.CContext,0)


        def getRuleIndex(self):
            return DHGrammarParser.RULE_h

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterH" ):
                listener.enterH(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitH" ):
                listener.exitH(self)




    def h(self):

        localctx = DHGrammarParser.HContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_h)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(DHGrammarParser.ROOM)
            self.state = 118
            self.match(DHGrammarParser.ID)
            self.state = 119
            self.match(DHGrammarParser.LBRACKET)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2046) != 0:
                self.state = 120
                self.lsl()


            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2095104) != 0:
                self.state = 123
                self.lal()


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 126
                self.c()


            self.state = 129
            self.match(DHGrammarParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CORRIDOR(self):
            return self.getToken(DHGrammarParser.CORRIDOR, 0)

        def ID(self):
            return self.getToken(DHGrammarParser.ID, 0)

        def LBRACKET(self):
            return self.getToken(DHGrammarParser.LBRACKET, 0)

        def l2id(self):
            return self.getTypedRuleContext(DHGrammarParser.L2idContext,0)


        def RBRACKET(self):
            return self.getToken(DHGrammarParser.RBRACKET, 0)

        def lsl(self):
            return self.getTypedRuleContext(DHGrammarParser.LslContext,0)


        def lal(self):
            return self.getTypedRuleContext(DHGrammarParser.LalContext,0)


        def c(self):
            return self.getTypedRuleContext(DHGrammarParser.CContext,0)


        def getRuleIndex(self):
            return DHGrammarParser.RULE_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP" ):
                listener.enterP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP" ):
                listener.exitP(self)




    def p(self):

        localctx = DHGrammarParser.PContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(DHGrammarParser.CORRIDOR)
            self.state = 132
            self.match(DHGrammarParser.ID)
            self.state = 133
            self.match(DHGrammarParser.LBRACKET)
            self.state = 134
            self.l2id()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2046) != 0:
                self.state = 135
                self.lsl()


            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 2095104) != 0:
                self.state = 138
                self.lal()


            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 141
                self.c()


            self.state = 144
            self.match(DHGrammarParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class L2idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.ID)
            else:
                return self.getToken(DHGrammarParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.COMMA)
            else:
                return self.getToken(DHGrammarParser.COMMA, i)

        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_l2id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL2id" ):
                listener.enterL2id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL2id" ):
                listener.exitL2id(self)




    def l2id(self):

        localctx = DHGrammarParser.L2idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_l2id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 146
                    self.match(DHGrammarParser.ID)
                    self.state = 147
                    self.match(DHGrammarParser.COMMA) 
                self.state = 152
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 153
            self.match(DHGrammarParser.ID)
            self.state = 154
            self.match(DHGrammarParser.COMMA)
            self.state = 155
            self.match(DHGrammarParser.ID)
            self.state = 156
            self.match(DHGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LslContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.SContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.SContext,i)


        def COMMA(self):
            return self.getToken(DHGrammarParser.COMMA, 0)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lsl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLsl" ):
                listener.enterLsl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLsl" ):
                listener.exitLsl(self)




    def lsl(self):

        localctx = DHGrammarParser.LslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lsl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.s()
            self.state = 159
            self.match(DHGrammarParser.COMMA)
            self.state = 161
            self.s()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def a(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.AContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.AContext,i)


        def COMMA(self):
            return self.getToken(DHGrammarParser.COMMA, 0)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLal" ):
                listener.enterLal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLal" ):
                listener.exitLal(self)




    def lal(self):

        localctx = DHGrammarParser.LalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.a()
            self.state = 164
            self.match(DHGrammarParser.COMMA)
            self.state = 166
            self.a()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LsgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GLOBAL(self):
            return self.getToken(DHGrammarParser.GLOBAL, 0)

        def LBRACKET(self):
            return self.getToken(DHGrammarParser.LBRACKET, 0)

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.SContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.SContext,i)


        def RBRACKET(self):
            return self.getToken(DHGrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.COMMA)
            else:
                return self.getToken(DHGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lsg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLsg" ):
                listener.enterLsg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLsg" ):
                listener.exitLsg(self)




    def lsg(self):

        localctx = DHGrammarParser.LsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lsg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(DHGrammarParser.GLOBAL)
            self.state = 169
            self.match(DHGrammarParser.LBRACKET)
            self.state = 175
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 170
                    self.s()
                    self.state = 171
                    self.match(DHGrammarParser.COMMA) 
                self.state = 177
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

            self.state = 178
            self.s()
            self.state = 179
            self.match(DHGrammarParser.RBRACKET)
            self.state = 180
            self.match(DHGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GLOBAL(self):
            return self.getToken(DHGrammarParser.GLOBAL, 0)

        def LBRACKET(self):
            return self.getToken(DHGrammarParser.LBRACKET, 0)

        def a(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DHGrammarParser.AContext)
            else:
                return self.getTypedRuleContext(DHGrammarParser.AContext,i)


        def RBRACKET(self):
            return self.getToken(DHGrammarParser.RBRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(DHGrammarParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DHGrammarParser.COMMA)
            else:
                return self.getToken(DHGrammarParser.COMMA, i)

        def getRuleIndex(self):
            return DHGrammarParser.RULE_lag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLag" ):
                listener.enterLag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLag" ):
                listener.exitLag(self)




    def lag(self):

        localctx = DHGrammarParser.LagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_lag)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(DHGrammarParser.GLOBAL)
            self.state = 183
            self.match(DHGrammarParser.LBRACKET)
            self.state = 189
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 184
                    self.a()
                    self.state = 185
                    self.match(DHGrammarParser.COMMA) 
                self.state = 191
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 192
            self.a()
            self.state = 193
            self.match(DHGrammarParser.RBRACKET)
            self.state = 194
            self.match(DHGrammarParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spresencia(self):
            return self.getTypedRuleContext(DHGrammarParser.SpresenciaContext,0)


        def slluvia(self):
            return self.getTypedRuleContext(DHGrammarParser.SlluviaContext,0)


        def siluminacion(self):
            return self.getTypedRuleContext(DHGrammarParser.SiluminacionContext,0)


        def sreloj(self):
            return self.getTypedRuleContext(DHGrammarParser.SrelojContext,0)


        def stemperatura(self):
            return self.getTypedRuleContext(DHGrammarParser.StemperaturaContext,0)


        def shumo(self):
            return self.getTypedRuleContext(DHGrammarParser.ShumoContext,0)


        def sviento(self):
            return self.getTypedRuleContext(DHGrammarParser.SvientoContext,0)


        def sintrusos(self):
            return self.getTypedRuleContext(DHGrammarParser.SintrusosContext,0)


        def sgas(self):
            return self.getTypedRuleContext(DHGrammarParser.SgasContext,0)


        def sinundacion(self):
            return self.getTypedRuleContext(DHGrammarParser.SinundacionContext,0)


        def getRuleIndex(self):
            return DHGrammarParser.RULE_s

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterS" ):
                listener.enterS(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitS" ):
                listener.exitS(self)




    def s(self):

        localctx = DHGrammarParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_s)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.spresencia()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.slluvia()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 198
                self.siluminacion()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 199
                self.sreloj()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 200
                self.stemperatura()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 201
                self.shumo()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 7)
                self.state = 202
                self.sviento()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 8)
                self.state = 203
                self.sintrusos()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 9)
                self.state = 204
                self.sgas()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 10)
                self.state = 205
                self.sinundacion()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def apuerta(self):
            return self.getTypedRuleContext(DHGrammarParser.ApuertaContext,0)


        def acalefaccion(self):
            return self.getTypedRuleContext(DHGrammarParser.AcalefaccionContext,0)


        def apersiana(self):
            return self.getTypedRuleContext(DHGrammarParser.ApersianaContext,0)


        def aluz(self):
            return self.getTypedRuleContext(DHGrammarParser.AluzContext,0)


        def aventana(self):
            return self.getTypedRuleContext(DHGrammarParser.AventanaContext,0)


        def afrio(self):
            return self.getTypedRuleContext(DHGrammarParser.AfrioContext,0)


        def agas(self):
            return self.getTypedRuleContext(DHGrammarParser.AgasContext,0)


        def atoldo(self):
            return self.getTypedRuleContext(DHGrammarParser.AtoldoContext,0)


        def aalarma(self):
            return self.getTypedRuleContext(DHGrammarParser.AalarmaContext,0)


        def aemergencia(self):
            return self.getTypedRuleContext(DHGrammarParser.AemergenciaContext,0)


        def getRuleIndex(self):
            return DHGrammarParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)




    def a(self):
